--- a/src/assets/styles/_core/_common/_common.typography.scss
+++ b/src/assets/styles/_core/_common/_common.typography.scss
@@ -1,4 +1,4 @@
-$coke-font-size: 16px !default;
+$coke-font-size: 1rem !default;
 $coke-line-height: 1.5 !default;
 
 $coke-generate-font-selectors: false !default;
