--- a/src/assets/styles/base/tokens/colors.scss
+++ b/src/assets/styles/base/tokens/colors.scss
@@ -4,7 +4,7 @@ $color-white: #ffffff !default;
 $color-grey: grey !default;
 
 // DEFAULT SKIN:
-$color-primary: red !default;
+$color-primary: #2c3e50 !default;
 $color-secondary: #fafafa !default;
 $color-tertiary: #4992a9;
 $color-neutral: #dcedf3;
