--- a/src/assets/styles/base/tokens/spacing.scss
+++ b/src/assets/styles/base/tokens/spacing.scss
@@ -3,39 +3,43 @@ $padding-double: $padding * 2;
 
 // Paddings:
 [padding-vertical] {
-	padding-top: $padding;
-	padding-bottom: $padding;
+	padding-top: $padding !important;
+	padding-bottom: $padding !important;
 }
 
 [padding-horizontal] {
-	padding-right: $padding;
-	padding-left: $padding;
+	padding-right: $padding !important;
+	padding-left: $padding !important;
 }
 
 [padding] {
-	padding: $padding;
+	padding: $padding !important;
 }
+
 [padding-top] {
-	padding-top: $padding;
+	padding-top: $padding !important;
 }
+
 [padding-right] {
-	padding-right: $padding;
+	padding-right: $padding !important;
 }
+
 [padding-bottom] {
-	padding-bottom: $padding;
+	padding-bottom: $padding !important;
 }
+
 [padding-left] {
-	padding-left: $padding;
+	padding-left: $padding !important;
 }
 
 // Padding Double:
 [padding-2] {
-	padding: $padding-double;
+	padding: $padding-double !important;
 }
 
 [padding-vertical-2] {
-	padding-top: $padding-double;
-	padding-bottom: $padding-double;
+	padding-top: $padding-double !important;
+	padding-bottom: $padding-double !important;
 }
 
 // Margins:
@@ -43,63 +47,70 @@ $margin: $gutter;
 $margin-double: $margin * 2;
 
 [margin-vertical] {
-	margin-top: $margin;
-	margin-bottom: $margin;
+	margin-top: $margin !important;
+	margin-bottom: $margin !important;
 }
 
 [margin-horizontal] {
-	margin-right: $margin;
-	margin-left: $margin;
+	margin-right: $margin !important;
+	margin-left: $margin !important;
 }
 
 [margin] {
-	margin: $margin;
+	margin: $margin !important;
 }
+
 [margin-top] {
-	margin-top: $margin;
+	margin-top: $margin !important;
 }
+
 [margin-right] {
-	margin-right: $margin;
+	margin-right: $margin !important;
 }
+
 [margin-bottom] {
-	margin-bottom: $margin;
+	margin-bottom: $margin !important;
 }
+
 [margin-left] {
-	margin-left: $margin;
+	margin-left: $margin !important;
 }
 
 // Margin Double:
 [margin-2] {
-	margin: $margin-double;
+	margin: $margin-double !important;
 }
 
 [margin-vertical-2] {
-	margin-top: $margin-double;
-	margin-bottom: $margin-double;
+	margin-top: $margin-double !important;
+	margin-bottom: $margin-double !important;
 }
 
 [margin-horizontal-2] {
-	margin-right: $margin-double;
-	margin-left: $margin-double;
+	margin-right: $margin-double !important;
+	margin-left: $margin-double !important;
 }
 
 [margin-top-2] {
-	margin-top: $margin-double;
+	margin-top: $margin-double !important;
 }
+
 [margin-right-2] {
-	margin-right: $margin-double;
+	margin-right: $margin-double !important;
 }
+
 [margin-bottom-2] {
-	margin-bottom: $margin-double;
+	margin-bottom: $margin-double !important;
 }
+
 [margin-left-2] {
-	margin-left: $margin-double;
+	margin-left: $margin-double !important;
 }
 
 // Block elements:
 @mixin block() {
-	display: block;
-	width: 100%;
+	display: block !important;
+	width: 100% !important;
 }
 
 [block],
@@ -109,7 +120,7 @@ $margin-double: $margin * 2;
 
 @mixin block--full {
 	@include block;
-	height: 100%;
+	height: 100% !important;
 }
 
 [block--full],
