--- a/src/assets/styles/tools/responsive/responsive.breakpoints.scss
+++ b/src/assets/styles/tools/responsive/responsive.breakpoints.scss
@@ -1,9 +1,9 @@
 $coke-breakpoints: (
-	'phone': 320px,
-	'phablet': 576px,
-	'tablet': 768px,
-	'desktop': 1024px,
-	'big-desktop': 1200px,
+	'phone': 20rem,
+	'phablet': 36rem,
+	'tablet': 48rem,
+	'desktop': 64rem,
+	'big-desktop': 75rem,
 ) !default;
 
 // We transfer the reference of our map of the template
