--- a/src/assets/styles/base/page/page.scss
+++ b/src/assets/styles/base/page/page.scss
@@ -49,4 +49,9 @@ body {
 	padding: $gutter;
     text-align: center;
     color: $color-primary;
+
+	&__logo {
+		max-width: 300px;
+		margin-bottom: $gutter;
+	}
 }
